# rknn-yolov8s-multi-thread-inference

./: CMakeLists.txt  README.md
include/: ItcMultiDetect.h
src/: ItcMultiDetect.cc  compile.sh  coreNum.cc  main_test_threadpool.cc  postprocess.cc  postprocess.h  preprocess.cc  preprocess.h  rkYolov8n.cc  rkYolov8n.h  yolov8-p2_thread
